--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,12 @@
 body {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
   background: rgb(8, 125, 241);
 }
 
-#btn-alert {
+.btn {
   width: 200px;
   padding: 10px 30px;
 }
